--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
+<html>
+<head>
+  <title>Sails in Action</title>
+  <link rel="stylesheet" type="text/css" href="css/bootstrap.css">
+</head>
+<body>
 <h1>Sails in Action</h1>
+</body>
+</html>
+
