added chapter 4 repo link

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 </head>
 <body>
 <h1>Sails in Action</h1>
+
+<a href="https://github.com/irlnathan/brushfire-ch4-end">Chapter 4: End of Chapter Repo</a>
 </body>
 </html>
 
