--- a/index.html
+++ b/index.html
@@ -5,16 +5,11 @@
 </head>
 <body>
 <h1>Sails in Action</h1>
+<h2>Your #1 resource for Sails in Action source code files.</h2>
 
 <ul class="list-group">
   <li class="list-group-item"><h3><a href="https://github.com/irlnathan/brushfire-ch4-end">Chapter 4: End of Chapter Repo</a></h3></li>
-  <li class="list-group-item">Dapibus ac facilisis in</li>
-  <li class="list-group-item">Morbi leo risus</li>
-  <li class="list-group-item">Porta ac consectetur ac</li>
-  <li class="list-group-item">Vestibulum at eros</li>
 </ul>
-
-<a href="https://github.com/irlnathan/brushfire-ch4-end">Chapter 4: End of Chapter Repo</a>
 </body>
 </html>
 
