added chapter 3 repo to list

--- a/index.html
+++ b/index.html
@@ -8,8 +8,13 @@
 <h2>Your #1 resource for Sails in Action source code files.</h2>
 
 <ul class="list-group">
+  <li class="list-group-item"><h3><a href="https://github.com/irlnathan/brushfire-ch3-end">Chapter 3: End of Chapter Repo</a></h3></li>
+</ul>
+<ul class="list-group">
   <li class="list-group-item"><h3><a href="https://github.com/irlnathan/brushfire-ch4-end">Chapter 4: End of Chapter Repo</a></h3></li>
 </ul>
 </body>
 </html>
+
+
 
