added start of chapter 4 repo

--- a/index.html
+++ b/index.html
@@ -11,10 +11,14 @@
   <li class="list-group-item"><h3><a href="https://github.com/irlnathan/brushfire-ch3-end">Chapter 3: End of Chapter Repo</a></h3></li>
 </ul>
 <ul class="list-group">
+  <li class="list-group-item"><h3><a href="https://github.com/irlnathan/brushfire-ch4-start">Chapter 4: START of Chapter Repo</a></h3></li>
+</ul>
+<ul class="list-group">
   <li class="list-group-item"><h3><a href="https://github.com/irlnathan/brushfire-ch4-end">Chapter 4: End of Chapter Repo</a></h3></li>
 </ul>
 </body>
 </html>
+
 
 
 
