added chapter 5 repo

--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
 <ul class="list-group">
   <li class="list-group-item"><h3><a href="https://github.com/irlnathan/brushfire-ch4-end">Chapter 4: End of Chapter Repo</a></h3></li>
 </ul>
+<ul class="list-group">
+  <li class="list-group-item"><h3><a href="https://github.com/irlnathan/brushfire-ch5-end">Chapter 5: End of Chapter Repo</a></h3></li>
+</ul>
 </body>
 </html>
 
