--- a/index.html
+++ b/index.html
@@ -6,18 +6,24 @@
 <body>
 <h1>Sails in Action</h1>
 <h2>Your #1 resource for Sails in Action source code files.</h2>
-
 <ul class="list-group">
   <li class="list-group-item"><h3><a href="https://github.com/irlnathan/brushfire-ch3-end">Chapter 3: End of Chapter Repo</a></h3></li>
-</ul>
-<ul class="list-group">
+  <div> Chapter 3 starts from scratch. That is, you'll be creating a brand new project in Sails. So this repo is where should end up after going through chapter 3.</div>
+
   <li class="list-group-item"><h3><a href="https://github.com/irlnathan/brushfire-ch4-start">Chapter 4: START of Chapter Repo</a></h3></li>
-</ul>
-<ul class="list-group">
+  <div>We start the chapter with a fully baked new front end.  So you'll want to clone this repo before you begin chapter 4.</div>
+
   <li class="list-group-item"><h3><a href="https://github.com/irlnathan/brushfire-ch4-end">Chapter 4: End of Chapter Repo</a></h3></li>
-</ul>
-<ul class="list-group">
+  <div>This is where you want to end up after going through chapter 4.</div>
+
   <li class="list-group-item"><h3><a href="https://github.com/irlnathan/brushfire-ch5-end">Chapter 5: End of Chapter Repo</a></h3></li>
+  <div>Nothing is needed to start this chapter, so this is where you want to end up after going through chapter 5.</div>
+
+  <li class="list-group-item"><h3><a href="https://github.com/irlnathan/brushfire-ch6-start">Chapter 6: START of Chapter Repo</a></h3></li>
+  <div>We start chapter six with a new fully baked front-end. So you'll want to clone this repo before you begin chapter 6.</div>
+
+  <li class="list-group-item"><h3><a href="https://github.com/irlnathan/brushfire-ch6-end">Chapter 6: End of Chapter Repo and start to Chapter 7.</a></h3></li>
+  <div>This is where you want to end up after going through chapter 6 AND where you'll want to start chapter 7.</div>
 </ul>
 </body>
 </html>
