--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <h1>Sails in Action</h1>
 <h2>Your #1 resource for Sails in Action source code files.</h2>
 <ul class="list-group">
-  <li class="list-group-item"><h3><a href="https://github.com/irlnathan/brushfire-ch3-end">Chapter 3: End of Chapter Repo</a></h3></li>
-  <div> Chapter 3 starts from scratch. That is, you'll be creating a brand new project in Sails. So this repo is where should end up after going through chapter 3.</div>
+  <li class="list-group-item"><h3><a href="https://github.com/irlnathan/brushfire-ch3-end">Chapter 3: End of Chapter Repo</a></h3>
+  <div> Chapter 3 starts from scratch. That is, you'll be creating a brand new project in Sails. So this repo is where should end up after going through chapter 3.</div></li>
 
   <li class="list-group-item"><h3><a href="https://github.com/irlnathan/brushfire-ch4-start">Chapter 4: START of Chapter Repo</a></h3></li>
   <div>We start the chapter with a fully baked new front end.  So you'll want to clone this repo before you begin chapter 4.</div>
