--- a/index.html
+++ b/index.html
@@ -56,7 +56,10 @@
         </div></li>
 
         <li class="list-group-item"><h3><a href="https://github.com/irlnathan/brushfire-ch10-end">Chapter 10: END of Chapter Repo</a></h3>
-        <div>This is where you want to end up after going through chapter 1o.</div></li>
+        <div>This is where you want to end up after going through chapter 10.</div></li>
+
+        <li class="list-group-item"><h3><a href="https://github.com/irlnathan/brushfire-ch11-end">Chapter 11: END of Chapter Repo</a></h3>
+        <div>This is where you want to end up after going through chapter 11.</div></li>
 
       </ul>
     </div>
