added ch11-end info

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div>This is where you want to end up after going through chapter 10.</div></li>
 
         <li class="list-group-item"><h3><a href="https://github.com/irlnathan/brushfire-ch11-end">Chapter 11: END of Chapter Repo</a></h3>
-        <div>This is where you want to end up after going through chapter 11.</div></li>
+        <div>This is where you want to end up after going through chapter 11. <b>Remember to create a `local.js` file </b> in (e.g. `brushfire/config/local.js`) that contains your postgresql connections information as well as your mailgun api key and domain.</div></li>
 
       </ul>
     </div>
