--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div>This is where you want to end up after going through chapter 7.</div></li>
         
         <li class="list-group-item"><h3><a href="https://github.com/irlnathan/brushfire-chp8-start">Chapter 8: START of Chapter Repo</a></h3>
-        <div>We start chapter with some new assets so you'll want to clone this repo before start chapter 8.</div></li>
+        <div>We start chapter 8 with some new assets so you'll want to clone this repo before start chapter 8.</div></li>
         
         <li class="list-group-item"><h3><a href="https://github.com/irlnathan/brushfire-chp8-end">Chapter 8: END of Chapter Repo</a></h3>
         <div>This is where you want to end up after going through chapter 8 and where you'll want to start chapter 9.</div></li>
@@ -57,6 +57,9 @@
 
         <li class="list-group-item"><h3><a href="https://github.com/irlnathan/brushfire-ch10-end">Chapter 10: END of Chapter Repo</a></h3>
         <div>This is where you want to end up after going through chapter 10.</div></li>
+
+        <li class="list-group-item"><h3><a href="https://github.com/irlnathan/brushfire-ch11-start">Chapter 11: START of Chapter Repo</a></h3>
+        <div>We start chapter 11 with some new assets so you'll want to clone this repo before start chapter 8.</div></li>
 
         <li class="list-group-item"><h3><a href="https://github.com/irlnathan/brushfire-ch11-end">Chapter 11: END of Chapter Repo</a></h3>
         <div>This is where you want to end up after going through chapter 11. <b>Remember to create a `local.js` file </b> in (e.g. `brushfire/config/local.js`) that contains your postgresql connections information as well as your mailgun api key and domain.</div></li>
