added chapters 12 and 13

--- a/index.html
+++ b/index.html
@@ -64,6 +64,21 @@
         <li class="list-group-item"><h3><a href="https://github.com/irlnathan/brushfire-ch11-end">Chapter 11: END of Chapter Repo</a></h3>
         <div>This is where you want to end up after going through chapter 11. <b>Remember to create a `local.js` file </b> in (e.g. `brushfire/config/local.js`) that contains your postgresql connections information as well as your mailgun api key and domain.</div></li>
 
+        <li class="list-group-item"><h3><a href="https://github.com/irlnathan/brushfire-ch11-end">Chapter 12: START of Chapter Repo</a></h3>
+        <div>Since we're not adding any assets to the start of this chapter, you can continue with your existing project from the end of chapter 11, or clone the end of chapter 11 repo and start from there.
+        </div></li>
+
+        <li class="list-group-item"><h3><a href="https://github.com/irlnathan/brushfire-ch12-end">Chapter 12: END of Chapter Repo</a></h3>
+        <div>This is where you want to end up after going through chapter 12. <b>Remember to create a `local.js` file </b> in (e.g. `brushfire/config/local.js`) that contains your postgresql connections information as well as your mailgun api key and domain.</div></li>
+
+        <li class="list-group-item"><h3><a href="https://github.com/irlnathan/brushfire-ch12-end">Chapter 13: START of Chapter Repo</a></h3>
+        <div>Since we're not adding any assets to the start of this chapter, you can continue with your existing project from the end of chapter 12, or clone the end of chapter 12 repo and start from there.
+        </div></li>
+
+        <li class="list-group-item"><h3><a href="https://github.com/irlnathan/brushfire-ch13-end">Chapter 13: END of Chapter Repo</a></h3>
+        <div>This is where you want to end up after going through chapter 13. <b>Remember to create a `local.js` file </b> in (e.g. `brushfire/config/local.js`) that contains your postgresql connections information as well as your mailgun api key and domain.</div></li>
+
+
       </ul>
     </div>
   </body>
